# onvif

./: README.md
onvif-cmake/: CMakeLists.txt
onvif-cmake/libnzscan/: CMakeLists.txt
onvif-cmake/libnzscan/headers/: stdsoap2.h
onvif-cmake/libnzscan/src/: nzscan.cpp
onvif-cmake/test_nzscan/: CMakeLists.txt
onvif-cmake/test_nzscan/src/: nzscan.cpp  nzscan.h
